[project]
name = "dune-imperium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.22",
]

[tool.pyright]
include = ["src", "tests"]
exclude = [".git", "hello.py"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
strict = ["src", "tests"]
