[project]
name = "dune-imperium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
tests = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"

